[package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
edition = "2018"
name = "verge-indexer"
version = "0.1.0"
description = "Powerful & Versatile Verge Indexer"
keywords = ["verge", "indexer", "database", "cryptocurrency"]
categories = []
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/verge-indexer"
homepage = "https://github.com/justinvforvendetta/rust-verge-indexer"
repository = "https://github.com/justinvforvendeta/rust-verge-indexer"
readme = "README.md"

[dependencies]
bitcoin = "0.18.0"
bitcoin-bech32 = "*"
bitcoin_hashes = "0.3"
rust-vergecore-rpc = { version = "0.6", branch = "more-calls", git="https://github.com/justinvforvendetta/rust-vergecore-rpc" }
common_failures = "*"
failure = "*"
hex = "0.3"
secp256k1 = "0.12.2"
crossbeam-channel = "*"
structopt = "*"
default = "*"
dotenv = "*"
postgres = "*"
insideout = "*"
num_cpus = "1"
log = "0.4"
rayon = "1"
env_logger = { version = "*", default-features = false, features = ["termcolor", "atty", "humantime"]}
itertools = "0.8"
url = "1"

[dev-dependencies]
criterion = "0.2"
quickcheck = "0.8"
quickcheck_macros = "0.8"
